/*
 * Copyright 2016 Google, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.gomeplus.grpc.protobuf;

option java_multiple_files = false;


//--------------------- 查询用户 --------------------------------

message RequestUser {
    string appId = 1;
    int64 imUserId = 2;
}

message ResponseUser {
    int64 uid = 1;
    string token = 2;
    int64 tokenExpires = 3;
}

service GetUserService {
    rpc GetUser(RequestUser) returns (ResponseUser);
}

//------------------------ end -----------------------------

//--------------------- 保存群组 --------------------------------
message Group {
    string groupId = 1;
    int64 userId = 2;
    int32 type = 3;
    string groupName = 4;
    string groupDesc = 5;
    string avatar = 6;
    string qRcode = 7;
    int32 capacity = 8;
    int32 isAudit = 9;
    int32 isDele = 10;
    int64 createTime = 11;
    int64 updateTime = 12;
    int64 seq = 13;
    string subject = 14;
}


message RequestSaveGroup {
    string appId = 1;
    Group group = 2;
}

message ResponseSaveGroup {
    bool result = 1;
}

service SaveGroupService {
    rpc SaveGroupService(RequestSaveGroup) returns (ResponseSaveGroup);
}

//------------------------ end -----------------------------